<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTit_dialog_weixin_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text1"
        android:textSize="@dimen/text_size_largex"
        android:text="@string/remind" />

    <TextView
        android:id="@+id/tvMsg_dialog_weixin_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/text2"
        android:textSize="@dimen/text_size_large"
        android:text="@string/weixin_focus_reminder" />

    <Button
        android:id="@+id/btnOk_dialog_weixin_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_green_bg_selector"
        android:text="@string/open_weixin"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_largex" />

    <Button
        android:id="@+id/btnCancel_dialog_weixin_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_white_bg_selector"
        android:text="@string/cancel"
        android:textColor="@color/text2"
        android:textSize="@dimen/text_size_largex" />

</LinearLayout>