<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cqsynet.swifi.scaner.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <com.cqsynet.swifi.scaner.MaskView
        android:id="@+id/mask_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/iv_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#64000000"
        android:contentDescription="@null"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="center"
            android:src="@drawable/ic_back_camera" />

        <ImageView
            android:id="@+id/iv_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@null"
            android:scaleType="center"
            android:src="@drawable/ic_flash_close" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/scan_hint"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/iv_gift_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@null"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_gift_fire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@null"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/tv_cheat"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_white"
            android:gravity="center"
            android:text="@string/use_cheat"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_lottery"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_white"
            android:gravity="center"
            android:text="@string/scan_lottery"
            android:textColor="@android:color/white" />
    </LinearLayout>
</FrameLayout>
